--- a/conditionalcolordialog.ui
+++ b/conditionalcolordialog.ui
@@ -16,7 +16,7 @@
   <widget class="QScrollArea" name="scrollArea_3">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-2</x>
      <y>0</y>
      <width>200</width>
      <height>500</height>
@@ -40,7 +40,7 @@
    <widget class="QWidget" name="scrollAreaWidgetContents_6">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>-2</x>
       <y>0</y>
       <width>200</width>
       <height>500</height>
@@ -68,7 +68,7 @@
       <item>
        <layout class="QGridLayout" name="gridLayout_7">
         <property name="rightMargin">
-         <number>10</number>
+         <number>0</number>
         </property>
         <property name="spacing">
          <number>0</number>
@@ -76,12 +76,15 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label_18">
           <property name="text">
-           <string>Value</string>
+           <string> Value</string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QTabWidget" name="tabWidget">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="currentIndex">
            <number>0</number>
           </property>
@@ -899,6 +902,22 @@
         </item>
         <item row="1" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Fixed</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>2</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item>
            <widget class="QDoubleSpinBox" name="_valueBox">
             <property name="sizePolicy">
