--- a/GradientColorDialog.ui
+++ b/GradientColorDialog.ui
@@ -98,7 +98,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
-             <string>Saturation</string>
+             <string>Saturation:</string>
             </property>
            </widget>
           </item>
@@ -201,7 +201,7 @@
           <item row="4" column="0">
            <widget class="QLabel" name="label_6">
             <property name="text">
-             <string>Value</string>
+             <string>Value:</string>
             </property>
            </widget>
           </item>
@@ -290,7 +290,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
-             <string>Hue</string>
+             <string>Hue:</string>
             </property>
            </widget>
           </item>
@@ -368,7 +368,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="label_7">
             <property name="text">
-             <string>Saturation</string>
+             <string>Saturation:</string>
             </property>
            </widget>
           </item>
@@ -471,7 +471,7 @@
           <item row="4" column="0">
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>Value</string>
+             <string>Value:</string>
             </property>
            </widget>
           </item>
@@ -560,7 +560,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="label_9">
             <property name="text">
-             <string>Hue</string>
+             <string>Hue:</string>
             </property>
            </widget>
           </item>
