--- a/conditionalcolordialog.ui
+++ b/conditionalcolordialog.ui
@@ -57,7 +57,7 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>211</width>
+       <width>234</width>
        <height>436</height>
       </rect>
      </property>
@@ -73,12 +73,60 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_18">
-          <property name="text">
-           <string> Value</string>
+        <item row="1" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="spacing">
+           <number>0</number>
           </property>
-         </widget>
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Fixed</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>2</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="_valueBox">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Fixed</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>62</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
         <item row="2" column="0">
          <widget class="QTabWidget" name="tabWidget">
@@ -155,7 +203,7 @@
                  <item row="2" column="0">
                   <widget class="QLabel" name="label_5">
                    <property name="text">
-                    <string>Saturation</string>
+                    <string>Saturation:</string>
                    </property>
                   </widget>
                  </item>
@@ -258,7 +306,7 @@
                  <item row="4" column="0">
                   <widget class="QLabel" name="label_6">
                    <property name="text">
-                    <string>Value</string>
+                    <string>Value:</string>
                    </property>
                   </widget>
                  </item>
@@ -347,7 +395,7 @@
                  <item row="0" column="0">
                   <widget class="QLabel" name="label_4">
                    <property name="text">
-                    <string>Hue</string>
+                    <string>Hue:</string>
                    </property>
                   </widget>
                  </item>
@@ -425,7 +473,7 @@
                  <item row="2" column="0">
                   <widget class="QLabel" name="label_7">
                    <property name="text">
-                    <string>Saturation</string>
+                    <string>Saturation:</string>
                    </property>
                   </widget>
                  </item>
@@ -528,7 +576,7 @@
                  <item row="4" column="0">
                   <widget class="QLabel" name="label_8">
                    <property name="text">
-                    <string>Value</string>
+                    <string>Value:</string>
                    </property>
                   </widget>
                  </item>
@@ -617,7 +665,7 @@
                  <item row="0" column="0">
                   <widget class="QLabel" name="label_9">
                    <property name="text">
-                    <string>Hue</string>
+                    <string>Hue:</string>
                    </property>
                   </widget>
                  </item>
@@ -695,7 +743,7 @@
                  <item row="2" column="0">
                   <widget class="QLabel" name="label_13">
                    <property name="text">
-                    <string>Saturation</string>
+                    <string>Saturation:</string>
                    </property>
                   </widget>
                  </item>
@@ -798,7 +846,7 @@
                  <item row="4" column="0">
                   <widget class="QLabel" name="label_14">
                    <property name="text">
-                    <string>Value</string>
+                    <string>Value:</string>
                    </property>
                   </widget>
                  </item>
@@ -887,7 +935,7 @@
                  <item row="0" column="0">
                   <widget class="QLabel" name="label_15">
                    <property name="text">
-                    <string>Hue</string>
+                    <string>Hue:</string>
                    </property>
                   </widget>
                  </item>
@@ -900,57 +948,12 @@
           </widget>
          </widget>
         </item>
-        <item row="1" column="0">
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>2</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QDoubleSpinBox" name="_valueBox">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="layoutDirection">
-             <enum>Qt::LeftToRight</enum>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>31</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_18">
+          <property name="text">
+           <string> Conditional Value:</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
