--- a/fixedcolordialog.ui
+++ b/fixedcolordialog.ui
@@ -82,14 +82,14 @@
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>Hue</string>
+           <string>Hue:</string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Saturation</string>
+           <string>Saturation:</string>
           </property>
          </widget>
         </item>
@@ -192,7 +192,7 @@
         <item row="4" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Value</string>
+           <string>Value:</string>
           </property>
          </widget>
         </item>
