--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,6 +41,9 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
+      <property name="handleWidth">
+       <number>0</number>
+      </property>
       <widget class="QTabWidget" name="_tabWidget">
        <property name="enabled">
         <bool>false</bool>
@@ -185,6 +188,21 @@
           <property name="enabled">
            <bool>false</bool>
           </property>
+          <property name="indentation">
+           <number>0</number>
+          </property>
+          <property name="rootIsDecorated">
+           <bool>false</bool>
+          </property>
+          <property name="uniformRowHeights">
+           <bool>true</bool>
+          </property>
+          <property name="sortingEnabled">
+           <bool>false</bool>
+          </property>
+          <property name="wordWrap">
+           <bool>false</bool>
+          </property>
           <column>
            <property name="text">
             <string>Filters</string>
@@ -192,44 +210,23 @@
           </column>
           <item>
            <property name="text">
-            <string>Colorize</string>
+            <string>Modulo</string>
            </property>
-           <property name="flags">
-            <set>ItemIsEnabled</set>
-           </property>
-           <item>
-            <property name="text">
-             <string>Gradient</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Fixed</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Conditionnal</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Modulo</string>
-            </property>
-           </item>
           </item>
           <item>
            <property name="text">
-            <string>Miscellaneous</string>
+            <string>Gradient</string>
            </property>
-           <property name="flags">
-            <set>ItemIsEnabled</set>
+          </item>
+          <item>
+           <property name="text">
+            <string>Fixed</string>
            </property>
-           <item>
-            <property name="text">
-             <string>Sort</string>
-            </property>
-           </item>
+          </item>
+          <item>
+           <property name="text">
+            <string>Conditionnal</string>
+           </property>
           </item>
          </widget>
         </item>
@@ -317,7 +314,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="defaultUp">
